<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CasualMode">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="91dp" />

        <TextView
            android:id="@+id/resultViewer"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:text="@string/result_view"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="36sp"
            tools:text="Result View" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_number"
            tools:text="Generate Number" />

        <EditText
            android:id="@+id/numberField"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:ems="10"
            android:hint="@string/please_enter_the_guessed_cube_root"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textSize="36sp" />

        <Button
            android:id="@+id/submitAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_cube_root" />

        <TextView
            android:id="@+id/confirmationViewer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="36sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>