<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:contentDescription="@string/logoInfo"
            android:src="@drawable/square" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeText"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="67dp" />

        <Button
            android:id="@+id/casualButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/casual_mode" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <Button
            android:id="@+id/chgBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_mode" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <Button
            android:id="@+id/creditButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="credits" />
    </LinearLayout>

</RelativeLayout>